--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,15 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.sami.hangman_v10.GameActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="com.example.sami.hangman_v10.GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="0.44">
-
+        android:layout_height="167dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/hangmanView"
@@ -22,24 +20,35 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/wordCount"
+            android:id="@+id/takenLetters"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:textSize="40sp"></TextView>
+            android:layout_weight="0.41" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/inputUser"
+    <TextView
+        android:id="@+id/correctLetters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="false"
+        android:layout_gravity="center"
+        android:layout_weight="0.44"
+        android:textAlignment="center"
         android:textSize="40sp" />
 
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/inputUser"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="109dp"
         android:text="@string/confirm_button" />
+
+    <EditText
+        android:id="@+id/inputUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40sp" />
 
 </LinearLayout>
