--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,7 +23,8 @@
             android:id="@+id/takenLetters"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.41" />
+            android:layout_weight="0.41"
+            android:textAlignment="center" />
     </LinearLayout>
 
     <TextView
