--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -22,9 +22,10 @@
         <TextView
             android:id="@+id/takenLetters"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.41"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@android:color/holo_red_light" />
+
     </LinearLayout>
 
     <TextView
