--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,8 +4,11 @@
             <item>elefant</item>
             <item>hest</item>
             <item>okse</item>
-            <item>svin</item>
+            <item>ape</item>
             <item>hund</item>
             <item>katt</item>
+            <item>troll</item>
+            <item>gamer</item>
+            <item></item>
         </array>
     </resources>
