--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,6 +8,10 @@
     android:weightSum="1"
     tools:context="com.example.sami.hangman_v10.GameActivity">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="100sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="167dp"
@@ -17,15 +21,15 @@
             android:id="@+id/hangmanView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="3.12" />
 
         <TextView
             android:id="@+id/takenLetters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@android:color/holo_red_light" />
-
+            android:layout_width="40sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.37"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="26sp" />
     </LinearLayout>
 
     <TextView
@@ -34,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="false"
         android:layout_gravity="center"
-        android:layout_weight="0.44"
+        android:layout_weight="0.19"
         android:textAlignment="center"
         android:textSize="40sp" />
 
@@ -42,15 +46,14 @@
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/inputUser"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="109dp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginRight="50sp"
         android:text="@string/confirm_button" />
 
     <EditText
         android:id="@+id/inputUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp" />
+        android:textColor="@android:color/tab_indicator_text" />
 
 </LinearLayout>
