--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -28,7 +28,8 @@
             android:id="@+id/takenLetters"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.34" />
+            android:layout_weight="0.34"
+            android:textColor="@android:color/holo_red_light" />
 
     </LinearLayout>
 
