--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -44,15 +44,18 @@
 
     <Button
         android:id="@+id/confirmButton"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50sp"
-        android:layout_marginRight="50sp"
+        android:layout_marginLeft="100sp"
+        android:layout_marginRight="100sp"
         android:text="@string/confirm_button" />
 
     <EditText
         android:id="@+id/inputUser"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:digits="abcdefghijklmnopqrstuvwxyzæøå"
+        android:windowSoftInputMode="adjustResize"
+        android:textAppearance="?android:attr/smallScreens"/>
 </LinearLayout>
