--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorRed">#ff4444</color>
     <color name="colorBlueGray">#7092BE</color>
+    <color name="colorGray">#dbdee0</color>
 </resources>
