--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -12,6 +12,7 @@
         android:id="@+id/pieChart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20sp"
         android:layout_weight="0.97"></com.github.mikephil.charting.charts.PieChart>
 
     <Button
