--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#4286f4"
+    android:background="@color/colorBlueGray"
     tools:context="com.example.sami.hangman_v10.MainActivity"
     android:weightSum="1">
 
