Implemented back to main menu button inside a fragment. Implemented Game instructions activity Replaced change language button with imagebutton (country flag).

--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -8,6 +8,13 @@
     tools:context="com.example.sami.hangman_v10.RankActivity"
     android:weightSum="1">
 
+    <fragment
+        android:name="com.example.sami.hangman_v10.TopFragment"
+        android:id="@+id/TopFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/top_fragment"/>
+    
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
         android:layout_width="match_parent"
