--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#4286f4"
+    android:background="@color/colorBlueGray"
     tools:context="com.example.sami.hangman_v10.MainActivity"
     android:weightSum="1">
 
@@ -26,7 +26,7 @@
         android:layout_marginRight="200sp"
         android:text="@string/start" />
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonLanguage"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
