--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,20 @@
     tools:context="com.example.sami.hangman_v10.MainActivity"
     android:weightSum="1">
 
+    <ImageButton
+        android:id="@+id/buttonLanguage"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="50sp"
+        android:layout_height="40sp"
+        android:layout_gravity="right"
+        android:layout_marginRight="20sp"
+        android:layout_marginTop="20sp" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100sp"
+        android:layout_marginBottom="50sp"
         android:layout_weight="0.80"
         app:srcCompat="@mipmap/imageman" />
 
@@ -26,16 +35,6 @@
         android:layout_marginLeft="100sp"
         android:layout_marginRight="100sp"
         android:text="@string/start" />
-
-    <Button
-        android:id="@+id/buttonLanguage"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="100sp"
-        android:layout_marginRight="100sp"
-        android:text="@string/language" />
 
     <Button
         android:id="@+id/buttonRules"
