--- a/app/src/main/res/layout-land/activity_rank.xml
+++ b/app/src/main/res/layout-land/activity_rank.xml
@@ -8,6 +8,13 @@
     tools:context="com.example.sami.hangman_v10.RankActivity"
     android:weightSum="1">
 
+    <ImageButton
+        android:id="@+id/backToMenuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:srcCompat="@mipmap/backicon"/>
+
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
         android:layout_width="match_parent"
