--- a/app/src/main/res/layout/activity_game_rules.xml
+++ b/app/src/main/res/layout/activity_game_rules.xml
@@ -27,8 +27,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.72"
-        app:srcCompat="@mipmap/gameplay" />
+        android:layout_height="226dp"
+        app:srcCompat="@drawable/gameplay" />
 
 </LinearLayout>
